[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Menus/UITitle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Menus/Font/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="UserInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseRectangle" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseText" parent="." instance=ExtResource( 1 )]
text = "PAUSE"

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -79.0
margin_right = 203.0
margin_bottom = 97.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Menu"]
margin_right = 406.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "CONTINUE"

[node name="Retry" type="Button" parent="Menu"]
margin_top = 46.0
margin_right = 406.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "RETRY"

[node name="Main screen" type="Button" parent="Menu"]
margin_top = 92.0
margin_right = 406.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "MAIN MENU"

[node name="Quit" type="Button" parent="Menu"]
margin_top = 138.0
margin_right = 406.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "QUIT"
[connection signal="button_up" from="Menu/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="Menu/Retry" to="." method="_on_Retry_button_up"]
[connection signal="button_up" from="Menu/Main screen" to="." method="_on_Main_screen_button_up"]
[connection signal="button_up" from="Menu/Quit" to="." method="_on_Quit_button_up"]
